feat : using correct colors

--- a/assets/style/colors.scss
+++ b/assets/style/colors.scss
@@ -1,6 +1,6 @@
-$main: #008DEB;
-$managing: #5658ce;
-$results: #08a586;
+$main: rgba(155, 77, 202, 1);
+$managing: rgba(224, 164, 88, 1);
+$results: rgba(65, 157, 120, 1);
 $grey: #606c76;
 $grey-white: #eee;
 $error: rgba(244, 88, 102, 1);
